# databricks-ml-lakehouse

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  Taskfile.yml  databricks.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
db-schemas/: create-schemas-lakehouse.sql
envs/dev/: .dev.env
envs/prod/: .prod.env
envs/staging/: .staging.env
notebooks/: [EXPLO] bad_review_modeling.py
pipelines_configs/: features_labels_creation.yml  labels_creation.yml  model_deployment.yml  model_inference.yml  model_train.yml  setup.yml
resources/: bad_review_data_drift.yml  bad_review_model_inference_job.yml  bad_review_model_training_job.yml  feature_ingestion_job.yml  olist_ingestion_job.yml
resources/data-lake-jobs/: olist_ingestion_pipeline.yml  olist_ingestion_pipeline_bronze.yml  olist_ingestion_pipeline_silver.yml
src/libs/: delta_utils.py  loading_utils.py  logger_utils.py  utils.py  validation_utils.py  yaml_expectation_configurations.py
src/ml_pipelines/: data_drift_pipeline.py  features_labels_creation.py  labels_creation.py  labels_creation_job.py  model_deployment_job.py  model_inference.py  model_inference_job.py  model_inference_pipeline.py  model_train.py  model_train_job.py  model_training_pipeline.py  setup.py  setup_job.py
src/ml_pipelines/cfg/: data_drift_pipeline.yaml  model_inference_pipeline.yaml  model_training_pipeline.yaml
src/ml_pipelines/components/: data_drift.py  feature_label_creator.py  (+5 more)
src/validators/: feature_store_validation.py
tests/: feature_creator_test.py  model_training_test.py  run_tests.py  sadas.py
(+43 files in other folders)
